# Secunda

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml  requirements.txt  specs.txt
alembic/: env.py
alembic/versions/: 0001_create_tables.py
app/: seed.py
app/api/v1/: router.py
app/api/v1/routers/: activities.py  buildings.py  organizations.py
app/core/: config.py  logging.py  security.py
app/db/: session.py
app/models/: __init__.py  activity.py  building.py  organization.py  phone.py
app/repositories/: activity.py  building.py  organization.py
app/schemas/: __init__.py  activity.py  building.py  organization.py  pagination.py
app/services/: activities.py  buildings.py  organizations.py
docs/: architecture.txt
scripts/: entrypoint.sh
