[project]
name = "secunda"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.13.2",
    "aiosqlite>=0.20.0",
    "fastapi[standard]>=0.115.0",
    "pydantic>=2.8.2",
    "pydantic-settings>=2.4.0",
    "sqlalchemy>=2.0.32",
    "uvicorn>=0.30.6",
    "greenlet>=3.3.1",
]
